# Zachs-Lists

./: .dockerignore  .env.example  .gitignore  .prettierignore  DEV_SETUP.md  Dockerfile  LICENSE  README.md  config formats.txt  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: requirements.txt  wsgi.py
backend/app/: __init__.py  config.py  extensions.py  socketio.py
backend/app/blueprints/: __init__.py  admin.py  analytics.py  auth.py  lists.py  user.py
backend/app/models/: __init__.py  analytics.py  announcement.py  blocklist_library.py  cache.py  job.py  limit_request.py  progress.py  system_config.py  user.py
backend/app/scheduled_tasks/: __init__.py  tasks.py
backend/app/services/: __init__.py  cache_manager.py  http_client.py  job_poller.py  job_queue.py
backend/app/utils/: __init__.py  security.py  validators.py
backend/scripts/: migrate_to_mongodb.py
docker/: entrypoint.sh  gunicorn.conf.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AnnouncementBanner.tsx  Layout.tsx  LimitRequestModal.tsx  LoadingSpinner.tsx  NotificationBanner.tsx  PublicNav.tsx
frontend/src/config/: site.ts
mongo-init/: seed_library.js
rust-worker/: Cargo.toml  MONGODB_SCHEMA.md
rust-worker/src/: config.rs  downloader.rs  extractor.rs  generator.rs  main.rs  processor.rs  whitelist.rs  worker.rs
rust-worker/src/db/: cache.rs  job.rs  mod.rs  progress.rs  user.rs  user_config.rs
(+52 files in other folders)
